objects/ssot__ServiceAppointment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActualDurationNumber__c</fullName>
        <label>Actual Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ActualEndDateTime__c</fullName>
        <label>Actual End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ActualStartDateTime__c</fullName>
        <label>Actual Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AdditionalInformationText__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AddressId__c</fullName>
        <label>Address</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppointmentBundlePolicyId__c</fullName>
        <label>Appointment Bundle Policy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppointmentPriority__c</fullName>
        <label>Appointment Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppointmentReasonCodeId__c</fullName>
        <label>Appointment Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppointmentStatusReasonId__c</fullName>
        <label>Appointment Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ArrivalWindowEndDateTime__c</fullName>
        <label>Arrival Window End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ArrivalWindowStartDateTime__c</fullName>
        <label>Arrival Window Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CancellationReasonText__c</fullName>
        <label>Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDateTime__c</fullName>
        <label>Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DurationInMinutes__c</fullName>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationQuantity__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DurationUOMId__c</fullName>
        <label>Duration Unit Of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EarliestStartDateTime__c</fullName>
        <label>Earliest Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EmailAddress__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelType__c</fullName>
        <label>Engagement Channel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GeocodeAccuracy__c</fullName>
        <label>Geocode Accuracy</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Service Appointment Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InJeopardy__c</fullName>
        <label>In Jeopardy</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAutoScheduled__c</fullName>
        <label>Is Auto Scheduled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBundleMember__c</fullName>
        <label>Is Bundle Member</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBundle__c</fullName>
        <label>Is Bundle</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsEmergency__c</fullName>
        <label>Is Emergency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsFillInCandidate__c</fullName>
        <label>Is Fill In Candidate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsManuallyBundled__c</fullName>
        <label>is Manually Bundled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsMultiDay__c</fullName>
        <label>Is MultiDay</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsOffsiteAppointment__c</fullName>
        <label>is Offsite Appointment</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPinned__c</fullName>
        <label>Is Pinned</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsUpdatedByOptimization__c</fullName>
        <label>Is Updated By Optimization</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordId__c</fullName>
        <label>Parent Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordObject__c</fullName>
        <label>Parent Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRecordStatusCategory__c</fullName>
        <label>Parent Record Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PhoneNumberText__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedBundleId__c</fullName>
        <label>Related Bundle</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledEndDateTime__c</fullName>
        <label>Scheduled End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledStartDateTime__c</fullName>
        <label>Scheduled Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentNumber__c</fullName>
        <label>Service Appointment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentScheduleMode__c</fullName>
        <label>Service Appointment Schedule Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentStatusCategory__c</fullName>
        <label>Service Appointment Status Category</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentStatus__c</fullName>
        <label>Service Appointment Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceAppointmentType__c</fullName>
        <label>Service Appointment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceDocumentTemplateIdentifier__c</fullName>
        <label>Service Document Template Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceNoteText__c</fullName>
        <label>Service Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTerritoryId__c</fullName>
        <label>Service Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldScheduleOverLowerPriorityAppt__c</fullName>
        <label>Schedule Over Lower Priority Appointment</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectText__c</fullName>
        <label>Subject Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WorkTypeId__c</fullName>
        <label>Work Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009442908_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointment_AccountId_map_Acc_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ServiceAppointment_AccountId_map_Acc_rel</relationshipLabel>
        <relationshipName>rel_1702009442908_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009443217_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointment_DurationUOMId_map_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>ServiceAppointment_DurationUOMId_map_rel</relationshipLabel>
        <relationshipName>rel_1702009443217_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009444735_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ServiceAppointment_CreatedById_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ServiceAppointment_CreatedById_map_U_rel</relationshipLabel>
        <relationshipName>rel_1702009444735_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>